# Zi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  SECURITY.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: build-wheels.yml  docs.yml
python/: README.md  README.zh.md
python/zix/: __init__.py
src/: context.rs  dag.rs  distributed.rs  errors.rs  io.rs  lib.rs  metrics.rs  operator.rs  orbit.rs  pipeline.rs  py.rs  record.rs  version.rs
src/domain/: audio.rs  image.rs  mod.rs  text.rs  video.rs
src/dsl/: compiler.rs  ir.rs  mod.rs  parser.rs
src/enrich/: annotation.rs  augmentation.rs  mod.rs  synthesis.rs
src/export/: manifest.rs  mod.rs  writer.rs
src/ingest/: format.rs  mod.rs  reader.rs
src/inspect/: diff.rs  distribution.rs  mod.rs  profile.rs  statistics.rs
src/log/: analytics.rs  config.rs  context.rs  core.rs  formatters.rs  handlers.rs  mod.rs  security.rs
src/operators/: augment.rs  dedup.rs  field.rs  filter.rs  lang.rs  limit.rs  llm.rs  merge.rs  metadata.rs  mod.rs  pii.rs  quality.rs  sample.rs  shuffle.rs  split.rs  token.rs  transform.rs
src/orbit/: operator_registry.rs  plugin.rs  plugin_package.rs  runtime.rs
tests/: library_usage.rs  orbit_pipeline_integration.rs  pipeline_integration.rs  semantic_dedup_usage.rs
tests/core/: dag.rs  io.rs  metrics.rs  operator.rs  record.rs  version.rs
tests/fixtures/: library_input.jsonl  semantic_dedup.jsonl
tests/operators/: augment.rs  dedup.rs  filter.rs  lang.rs  limit.rs  metadata.rs  pii.rs  quality.rs  sample.rs  transform.rs
tests/orbit/: plugin.rs  plugin_package.rs  runtime.rs
tests/pipeline/: runtime.rs
tests/python/: __init__.py  test_core.py  test_operators.py
tests/rust/core/: dag.rs
tests/rust/operators/: augment.rs  filter.rs  sample.rs  transform.rs
tests/rust/orbit/: plugin.rs
