# Copyright © 2025 Wenze Wei. All Rights Reserved.
#
# This file is part of Zi.
# The Zi project belongs to the Dunimd project team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "Zi"
version = "0.1.0"
edition = "2021"
description = "Core library for the Zi data processing engine."
license = "Apache-2.0"

[lib]
name = "Zi"
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
regex = "1.10"
csv = "1.3"
arrow2 = { version = "0.17", features = ["io_parquet", "io_csv", "serde_json"] }
rand = { version = "0.8", features = ["small_rng"] }
libloading = "0.8"

[dev-dependencies]
tempfile = "3.10"
