# Copyright © 2025-2026 Wenze Wei. All Rights Reserved.
#
# This file is part of Zi.
# The Zi project belongs to the Dunimd Team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Zi Python Project Configuration
#
# This file defines the Python project metadata, build system, and tooling
# configuration for the Zi framework's Python package (zix).
#
# Build System:
# - maturin: Rust-based Python extension build tool
# - Requires maturin >= 1.0, < 2.0
#
# Project Metadata:
# - name: Package name on PyPI
# - version: Semantic versioning (aligned with Rust crate)
# - description: Brief description of functionality
# - readme: README file for PyPI
# - requires-python: Minimum Python version
# - license: SPDX license identifier
# - authors: Project maintainers
# - keywords: Searchable tags for PyPI

# Build System Configuration
# Maturin is a build tool for Rust-based Python extensions.
# It handles compilation, wheel generation, and PyPI publishing.
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# Project Metadata
# Defines package information for PyPI and installation tools
[project]
name = "zix"
version = "0.1.0"
description = "Unified Data Quality Assessment, Cleaning, Transformation, Sampling, and Augmentation Framework"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Dunimd Team", email = "dunimd@outlook.com"}
]
keywords = [
    "data-quality",
    "data-cleaning",
    "data-transformation",
    "data-sampling",
    "data-augmentation",
    "data-profiling",
    "data-pipeline",
    "rust",
    "pyo3"
]

# PyPI Classifiers
# Provides metadata for PyPI package discovery and filtering
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Maturin Configuration
# Configures the Rust extension build process
# - module-name: Python module name (matches Cargo lib name)
# - features: Enabled Cargo features for the build
[tool.maturin]
module-name = "_zix"
features = ["pyo3"]
